crates/codira_codegen/src/snapshots/codira_codegen__test__bit_op_u8.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func not(a: u8) -> u8 { !a }\n    public func bitand(a: u8, b: u8) -> u8 { a & b }\n    public func bitor(a: u8, b: u8) -> u8 { a | b }\n    public func bitxor(a: u8, b: u8) -> u8 { a ^ b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @not(i8 %0) local_unnamed_addr #0 {
body:
  %not = xor i8 %0, -1
  ret i8 %not
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @bitand(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %bit_and = and i8 %1, %0
  ret i8 %bit_and
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @bitor(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %bit_or = or i8 %1, %0
  ret i8 %bit_or
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i8 @bitxor(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %bit_xor = xor i8 %1, %0
  ret i8 %bit_xor
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
