crates/codira_codegen/src/snapshots/codira_codegen__test__compare_op_f32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func equals(a: f32, b: f32) -> bool { a == b }\n    public func not_equal(a: f32, b: f32) -> bool { a != b}\n    public func less(a: f32, b: f32) -> bool { a < b }\n    public func less_equal(a: f32, b: f32) -> bool { a <= b }\n    public func greater(a: f32, b: f32) -> bool { a > b }\n    public func greater_equal(a: f32, b: f32) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @equals(float %0, float %1) local_unnamed_addr #0 {
body:
  %eq = fcmp oeq float %0, %1
  ret i1 %eq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @not_equal(float %0, float %1) local_unnamed_addr #0 {
body:
  %neq = fcmp one float %0, %1
  ret i1 %neq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @less(float %0, float %1) local_unnamed_addr #0 {
body:
  %less = fcmp olt float %0, %1
  ret i1 %less
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @less_equal(float %0, float %1) local_unnamed_addr #0 {
body:
  %lesseq = fcmp ole float %0, %1
  ret i1 %lesseq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @greater(float %0, float %1) local_unnamed_addr #0 {
body:
  %greater = fcmp ogt float %0, %1
  ret i1 %greater
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @greater_equal(float %0, float %1) local_unnamed_addr #0 {
body:
  %greatereq = fcmp oge float %0, %1
  ret i1 %greatereq
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
