crates/codira_codegen/src/snapshots/codira_codegen__test__compare_op_i64.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func equals(a: i64, b: i64) -> bool { a == b }\n    public func not_equal(a: i64, b: i64) -> bool { a != b}\n    public func less(a: i64, b: i64) -> bool { a < b }\n    public func less_equal(a: i64, b: i64) -> bool { a <= b }\n    public func greater(a: i64, b: i64) -> bool { a > b }\n    public func greater_equal(a: i64, b: i64) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @equals(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %eq = icmp eq i64 %0, %1
  ret i1 %eq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @not_equal(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %neq = icmp ne i64 %0, %1
  ret i1 %neq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @less(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %less = icmp slt i64 %0, %1
  ret i1 %less
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @less_equal(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %lesseq = icmp sle i64 %0, %1
  ret i1 %lesseq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @greater(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %greater = icmp sgt i64 %0, %1
  ret i1 %greater
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @greater_equal(i64 %0, i64 %1) local_unnamed_addr #0 {
body:
  %greatereq = icmp sge i64 %0, %1
  ret i1 %greatereq
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
